LIMO-297: Fixed vertical alignment in score cell

--- a/src/components/livescore/ls-list/_ls-list.scss
+++ b/src/components/livescore/ls-list/_ls-list.scss
@@ -189,6 +189,13 @@
 			text-align: center;
 			flex : 0 0 54px;
 			background-color: rgba(0,0,0,0.02);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+				> span {
+					margin: 0 2px;
+				}
 		  }
 
 			&__hour {
